package com.dmit.entity.car;

public enum FuelType {
    PETROL, DIESEL, ELECTRIC;
}
