package com.dmit.entity.car;

public enum TransmissionType {
    AUTOMATIC, SEMI_AUTOMATIC, MANUAL;
}