package com.dmit.entity.car;

public enum BodyType {
    HATCHBACK, SEDAN, SUV, COUPE, CONVERTIBLE, WAGON, VAN, JEEP;
}
